[gd_scene load_steps=2 format=3 uid="uid://bkxa0aj6v7mw3"]

[ext_resource type="Script" path="res://uis/layer4/menu_content.gd" id="1_0xyei"]

[node name="MenuContent" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_0xyei")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="BackBtn" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../HomeScreenBtn")
text = "BACK"

[node name="HomeScreenBtn" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
focus_neighbor_top = NodePath("../BackBtn")
text = "HOMEPAGE"

[connection signal="pressed" from="CenterContainer/VBoxContainer/BackBtn" to="." method="_on_back_btn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HomeScreenBtn" to="." method="_on_home_screen_btn_pressed"]
